Moving to PSR-4. Adding new services 4011, 3012, 4012, 3013.

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,15 @@
         "phpunit/PHPUnit": "3.7.*"
     },
     "autoload": {
-        "psr-0": {
-            "": ["src/", "test/"]
+        "psr-4": {
+            "BitWeb\\BankLink\\": "src/",
+            "BitWebTest\\BankLink\\" : "test/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BitWeb\\BankLink\\": "src/",
+            "BitWebTest\\BankLink\\" : "test/"
         }
     }
 }
